[tool.poetry]
name = "mnist-vae"
version = "0.1.0"
description = ""
authors = ["seblum <sebast.blum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
numpy = "1.19.2"
tensorflow-probability = "^0.12.1"
tensorflow-datasets = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
